# jailbreak_root_detection

android/src/main/cpp/: CMakeLists.txt
android/src/main/kotlin/com/anish/trust_fall/externalstorage/: ExternalStorageCheck.kt
